--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
-
 {
   "name": "asistente-ica-backend",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "openai": "^4.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
