--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "asistente-ica-backend",
+  "name": "asistente-medico-backend",
   "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "openai": "^4.4.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "cors": "^2.8.5"
   }
 }
